@@ -1,3 +1,9 @@
+2014-07-11  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Remove unused file.
+
+        * html/shadow/MediaControlsGtk.h: Removed.
+
 2014-07-11  Manuel Rego Casasnovas  <rego@igalia.com>
 
         [CSS Grid Layout] Update grid-auto-flow to the new syntax
